# Instruction_Roofline_Analysis

./: CMakeLists.txt  README.md  build.sh
Roofline/: draw_Roofline.py
include/: utility.cuh
src/: NCU_Ginkgo_main.cu  NCU_cuSPARSE_main.cu  Time_Ginkgo_main.cu  Time_cuSPARSE_main.cu
